# goit-pythonweb-hw-12

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  schemas.py
api/: contacts.py
conf/: db.py
database/: db.py
docs/: conf.py  index.rst
entity/: models.py
migrations/: env.py
migrations/versions/: 25ad1707f8a4_initial_migration.py
repository/: contacts.py
services/: contacts.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py  messages.py
src/database/: models.py
src/repository/: users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  email.py  users.py
src/services/templates/: reset_password.html
tests/: test_integration_auth.py  test_unit_repository_contacts.py
